--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,92 @@
 .container {
-  padding: 0 2rem;
+  padding: 2rem;
+  background-color: black;
+}
+
+.containerBlack {
+  background-color: black;
+  min-height: 100%;
+  width: 100%;
+  padding: 50px;
+}
+
+.messageContainer {
+  display: flex;
+  flex-direction: column;
+  width: 700px;
+  margin: auto;
+  height: 70vh;
+  overflow: auto;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+.message {
+  background-color: rgb(72, 72, 74);
+  color: white;
+  border-radius: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  width: 400px;
+}
+
+.messageFromMe {
+  background-color: rgb(10, 132, 255);
+  color: white;
+  border-radius: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  width: 400px;
+}
+
+.messageInformations {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-bottom: 5px;
+}
+
+.messageName {
+  padding-left: 20px;
+  padding-right: 20px;
+  font-style: italic;
+  font-weight: lighter;
+  margin: 0;
+  font-size: 12px;
+}
+
+.messageContent {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0;
+}
+
+.formMessage {
+  width: 700px;
+  margin-top: 30px;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  flex-direction: row;
+}
+
+.inputMessage {
+  border-radius: 25px;
+  border: 1px solid grey;
+  width: 100%;
+  height: 30px;
+  padding: 5px 5px 5px 10px;
+}
+
+.buttonForm {
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .main {
